--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ color:#fff;
 <body>
  <header>
   <div class="header-content">
-    <img src="abi" width="50px" height="50px">
+    <img src="abina.png" width="50px" height="50px">
     <h1> S Abinaya</h1>
     <p> Studying from computer science </p>
   </div>
